Fixed the wrapping in IE

--- a/assets/comments.css
+++ b/assets/comments.css
@@ -735,3 +735,6 @@ override submit styles in TwentyEleven theme */
 	position: absolute;
 	visibility: hidden;
 }
+.social-aggregation-results {
+	white-space: nowrap;
+}
